# cshap-cmake-conan

./: README.md  conanfile.py
src/: CMakeLists.txt
src/App/: AppEntry.cs  AppWindow.xaml  AppWindow.xaml.cs  CMakeLists.txt
src/Tests/: CMakeLists.txt
src/Tests/TestDemoApp/: CMakeLists.txt  TestApp.cs
